修复banner图bug,完善设计
